Bug 1192128 - In DOM memory reporter, handle WindowID() being a uint64_t. r=mccr8.